<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="820dp"
        android:background="@color/dark_white"
        tools:context=".MainActivity">

        <!-- intro -->
        <RelativeLayout
            android:id="@+id/intro_main"
            android:layout_width="match_parent"
            android:layout_height="290dp"
            android:background="@color/pastel_blue"
            android:gravity="center_horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:background="@color/pastel_blue">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="35dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/logo" />

                <TextView
                    android:id="@id/logo_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="-2dp"
                    android:layout_marginBottom="0dp"
                    android:layout_toEndOf="@+id/imageView"
                    android:fontFamily="@font/montserrat_alternates_bold"
                    android:text="@string/logo_name"
                    android:textSize="10sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/switch_btn"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@id/logo_name"
                    android:layout_marginStart="200dp"
                    android:fontFamily="@font/montserrat_alternates_bold"
                    android:text="@string/enableNight_btn"
                    android:background="@drawable/button"
                    android:backgroundTint="@color/dark_blue"
                    android:textColor="@color/white"
                    android:textSize="10sp" />

            </RelativeLayout>

            <TextView
                android:id="@+id/text_intro_header"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="55dp"
                android:fontFamily="@font/montserrat_alternates_bold"
                android:gravity="center"
                android:text="@string/about_intro_header"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/text_intro_underheader"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_intro_header"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/montserrat_alternates"
                android:gravity="center"
                android:text="@string/main_intro_underheader"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="100dp"
                android:src="@drawable/img_bk3" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="130dp"
                android:layout_marginEnd="0dp"
                android:src="@drawable/img_bk1" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/shadow_about_blck1"
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="22dp"
            android:layout_marginTop="-48dp"
            android:layout_below="@+id/intro_main"
            android:background="@drawable/book_item"
            android:backgroundTint="@color/dark_blue" />

        <RelativeLayout
            android:id="@+id/about_blck1"
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:layout_below="@+id/intro_main"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="-50dp"
            android:background="@drawable/book_item"
            android:backgroundTint="@color/white">

            <TextView
                android:id="@+id/about_block1_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="35dp"
                android:fontFamily="@font/montserrat_alternates_bold"
                android:text="@string/about_block1_num"
                android:textColor="@color/dark_blue"
                android:textSize="24sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="0dp"
                android:layout_toEndOf="@+id/about_block1_num"
                android:fontFamily="@font/montserrat_alternates_bold"
                android:text="@string/about_block1_k"
                android:textColor="@color/dark_blue"
                android:textSize="24sp"/>

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/about_block1_num"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/montserrat_alternates"
                android:gravity="center"
                android:text="@string/about_block1_txt"
                android:textColor="@color/dark_blue"
                android:textSize="10sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/shadow_about_blck2"
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:layout_below="@+id/intro_main"
            android:layout_marginStart="20dp"
            android:layout_marginTop="-48dp"
            android:layout_toEndOf="@+id/shadow_about_blck1"
            android:background="@drawable/book_item"
            android:backgroundTint="@color/dark_blue" />
        
        <RelativeLayout
            android:id="@+id/about_blck2"
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:layout_below="@+id/intro_main"
            android:layout_marginStart="20dp"
            android:layout_marginTop="-50dp"
            android:layout_toEndOf="@+id/about_blck1"
            android:background="@drawable/book_item"
            android:backgroundTint="@color/white">

            <TextView
                android:id="@+id/about_block2_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="35dp"
                android:fontFamily="@font/montserrat_alternates_bold"
                android:text="@string/about_block2_num"
                android:textColor="@color/dark_blue"
                android:textSize="24sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="0dp"
                android:layout_toEndOf="@+id/about_block2_num"
                android:fontFamily="@font/montserrat_alternates_bold"
                android:text="@string/about_block2_k"
                android:textColor="@color/dark_blue"
                android:textSize="24sp"/>

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/about_block2_num"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/montserrat_alternates"
                android:gravity="center"
                android:text="@string/about_block2_txt"
                android:textColor="@color/dark_blue"
                android:textSize="10sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/shadow_about_blck3"
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:layout_below="@+id/intro_main"
            android:layout_marginStart="20dp"
            android:layout_marginTop="-48dp"
            android:layout_toEndOf="@+id/shadow_about_blck2"
            android:background="@drawable/book_item"
            android:backgroundTint="@color/dark_blue" />
        
        <RelativeLayout
            android:id="@+id/about_blck3"
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:layout_below="@+id/intro_main"
            android:layout_marginStart="20dp"
            android:layout_marginTop="-50dp"
            android:layout_toEndOf="@+id/about_blck2"
            android:background="@drawable/book_item"
            android:backgroundTint="@color/white">

            <TextView
                android:id="@+id/about_block3_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:fontFamily="@font/montserrat_alternates_bold"
                android:text="@string/about_block3_num"
                android:textColor="@color/dark_blue"
                android:textSize="24sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="0dp"
                android:layout_toEndOf="@+id/about_block3_num"
                android:fontFamily="@font/montserrat_alternates_bold"
                android:text="@string/about_block3_k"
                android:textColor="@color/dark_blue"
                android:textSize="24sp"/>

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/about_block3_num"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/montserrat_alternates"
                android:gravity="center"
                android:text="@string/about_block3_txt"
                android:textColor="@color/dark_blue"
                android:textSize="10sp" />

        </RelativeLayout>

        <!-- about_info -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:layout_below="@+id/intro_main"
            android:layout_marginTop="0dp">

            <TextView
                android:id="@+id/about_info_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="65dp"
                android:fontFamily="@font/montserrat_alternates_bold"
                android:gravity="center"
                android:text="@string/about_info_header"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/about_info_underheader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/about_info_header"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/montserrat_alternates"
                android:gravity="center"
                android:text="@string/about_info_underheader"
                android:textSize="12sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:id="@+id/about_info_img"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_below="@+id/about_info_underheader"
                android:layout_marginTop="15dp"
                android:src="@drawable/about" />

            <RelativeLayout
                android:id="@+id/about_info_txt"
                android:layout_width="340dp"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/about_info_img">

                <TextView
                    android:id="@+id/about_info_txt1"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_alternates"
                    android:text="@string/about_info_txt1"
                    android:textSize="10dp"/>

                <TextView
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/montserrat_alternates"
                    android:text="@string/about_info_txt2"
                    android:textSize="10dp"/>

            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/about_info_button"
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:layout_below="@+id/about_info_txt"
                android:layout_marginStart="105dp"
                android:layout_marginTop="22dp"
                android:background="@drawable/button"
                android:fontFamily="@font/montserrat_alternates_bold"
                android:text="@string/about_info_btn"
                android:textColor="@color/dark_blue"
                android:textSize="10sp" />

        </RelativeLayout>

    </RelativeLayout>
</ScrollView>